# lamachine-ethique

./: .gitignore  DETECTION_MALWARE_GUIDE.md  FINALISATION_COMPLETE.md  FONCTIONNALITES_AVANCEES.md  GUIDE_INSTALLATION_LA_MACHINE.txt  PROGRESS.md  README.md  README_FINAL.md  RECAPITULATIF_CONVERSATION_COMPLET.txt  RESTART_GUIDE.md  docs
backend/cpp/cpp/: CMakeLists.txt  analysis.cpp  config.cpp  counter_attacks_gui.cpp  ddos_monitor.cpp  firewall.cpp  install.cpp  main.cpp
backend/python/python/: README.md  analisys.py  config.py  firewall.py  main.py  main_commente.py
backend/the-machine/core/: MachineCore.ts
carnet d IPs/: README_Outil_Carnet_IPs.txt  blocage_ip_windows.py  carnet_ips.csv  outil_carnet_ips_gui.py  outil_carnet_ips_gui.spec  surveillance_carnet_ips.py
interface-graphique/: .gitignore  CREER-RACCOURCI-MACHINE.bat  CREER-RACCOURCI.bat  FINALISATION-EXECUTABLE.md  GUIDE-LANCEUR-ICONE.md  GUIDE-RESOLUTION-ERREURS.md  GUIDE-RESOLUTION-MODE-WEB.md  GUIDE_GITHUB.md  INSTALLATION-COMPLETE.md  LANCER-VRAIE-MACHINE.bat  LAUNCHER-PRINCIPAL.bat  La-Machine-Ethique-Accessible.html  La-Machine-Ethique.html  README-INSTALLATION-NON-VOYANT.txt  README-INSTALLATION.md  README.md  README_GITHUB.md  RESUME-FINAL-INSTALLATION.txt  START-LA-MACHINE.bat  VERIFICATION-INSTALLATION.bat  analysis.ts  build-portable.js  build-simple-exe.js  build-simple.js  config.ts  counter-attacks-gui.ts  create-exe.js  create-malware-detection-exe.js  create-trojan-icon.js  ddos-monitor.ts  electron-app.js  electron-builder-config.json  finalize.js  firewall.ts  fix-apostrophes.js  index.html  install-git.bat  install-git.ps1  install-github-desktop.bat  install.ts  (+19 more)
interface-graphique/assets/: icon-metadata.json
interface-graphique/dist-malware-detection/: INSTALL.bat  LAUNCH.bat  README.md  builder-debug.yml  builder-effective-config.yaml  main-malware-detection.js  malware-detection-interface.html  package-lock.json  package.json
interface-graphique/dist-portable/: La-Machine-Ethique.bat  README.md  electron-app.js  index.html  package.json
interface-graphique/renderer/: index.html
interface-graphique/renderer/styles/: main.css
interface-graphique/src/: main.ts
interface-graphique/src/components/: AIEnhancement.ts  AdvancedSurveillance.ts  CommunicationSystem.ts  EthicalMachineCore.ts  FinchInterface.ts  InterventionSystem.ts  MalwareDetection.ts  NumbersAlert.ts  ReeseInterface.ts  RootInterface.ts  ShawInterface.ts  ThreatAssessment.ts  UnifiedInterface.ts
interface-graphique/src/demo/: EthicalMachineDemo.ts
la machine ethique harold/: config.py  contre_attaques_gui_windows.py  ddos monitor.py  ddos_monitor.py  firewall.py  main.py  requirements.txt
la machine ethique linux 2/: La-Machine-Ethique.html  README_LINUX.txt  electron-app.js  package.json
la machine ethique web/: app_web_code.txt
machine-ethique-linux/: README_LINUX.txt  main-malware-detection.js  package.json  port-scanner.py
machine-ethique-linux/assets/: icon-metadata.json
parrot os/: La-Machine-Ethique.html  README_PARROT_OS.txt  electron-app.js  port-scanner.py
ubuntu/: README_UBUNTU.txt  package.json
ubuntu/assets/: icon-metadata.json
